# MagCalib

./: CMakeLists.txt  mag.ipynb  magnetometer.csv  main
include/: mag.hpp
src/: mag.cpp  main.cpp
